	Details: doc/replays-testcases/Original level 2 falling into wall.txt
	Testcase: doc/replays-testcases/Original level 2 falling into wall.p1r
	See FIX_ENTERING_GLITCHED_ROOMS in config.h .
FIXED: Optimized OPL mixing (MIDI music).
	Details: https://github.com/NagyD/SDLPoP/pull/238
	"More importantly: when run on a Raspberry Pi Zero, the music went from unusable to perfect,"
FIXED: Fixed the prince sliding through closed gates when you are using the caped prince graphics.
	Details: See FIX_CAPED_PRINCE_SLIDING_THROUGH_GATE in config.h .
DONE: Added a compilation-time flag to disable all fixes for vanilla execution.
	Details: https://github.com/NagyD/SDLPoP/pull/239
FIXED: If the prince dies on level 14, don't return to the intro after the level was restarted.
	Details: See FIX_LEVEL_14_RESTARTING in config.h .
DONE: Waste an RNG cycle in loose_shake() to match DOS PoP.
DONE: In new replays, use deprecation_number = 2. On playback, waste the RNG cycle only if deprecation_number >= 2.
	Older replays have deprecation_number <= 1, and we don't waste the RNG cycle when playing them back.
DONE: When backing offscreen (to the left) from the first guard on level 7 (among others), simulate the glitch from DOS PoP, which causes the prince to fall through the floor.
	Details: See https://github.com/NagyD/SDLPoP/issues/229
FIXED: On Windows, use Unicode/UTF-8 for stat().
	So SDLPoP can load levels from mod folders when a replay file restarts the level or advances to the next level.
DONE: Added a more visible error message when a mod referenced by a replay file cannot be found in the mods folder.
DONE: Allow guard skill customizations in SDLPoP.ini.
DONE: Made FIX_DOORTOP_DISABLING_GUARD configurable.


(no release date yet)
=================
(upcoming version)

DONE: Adjust SDL2 headers search path in CMake or macOS builds
FIXED: Don't hardcode level 13 for the loose floor events.
DONE: Mention the tricks page in the INI, since tricks are mentioned there.