@@ -655,3 +655,5 @@ DONE: Made FIX_DOORTOP_DISABLING_GUARD configurable.
 DONE: Adjust SDL2 headers search path in CMake or macOS builds
 FIXED: Don't hardcode level 13 for the loose floor events.
 DONE: Mention the tricks page in the INI, since tricks are mentioned there.
+FIXED: If a sprite's xpos is negative and divisible by 8, it appeared shifted 8 pixels to the left.
+	Details: See FIX_SPRITE_XPOS in config.h .
